--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "pinia": "^2.0.13",
+    "pinia-plugin-persistedstate": "^1.6.0",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
